<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.2.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.carlsberg.consumertech</groupId>
	<artifactId>service-template</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>service-template</name>
	<description>Service template for Consumer Tech</description>

	<packaging>pom</packaging>

	<properties>
		<java.version>11</java.version>
        <consumertech-java-commons.version>0.0.7</consumertech-java-commons.version>
		<checkerframework.version>3.4.0</checkerframework.version>
	</properties>

	<dependencies>
		<!-- Compile time static analysis tools -->
		<dependency>
			<groupId>org.checkerframework</groupId>
			<artifactId>checker-qual</artifactId>
			<version>${checkerframework.version}</version>
		</dependency>

	</dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>5.3.2</version>
                <configuration>
                    <autoUpdate>true</autoUpdate>
                    <format>all</format>
                    <skipProvidedScope>true</skipProvidedScope>
                    <skipRuntimeScope>true</skipRuntimeScope>
                    <suppressionFiles>
                        <suppressionFile>owasp-suppressions-java-commons.xml</suppressionFile>
                        <suppressionFile>${project.basedir}/owasp-suppressions.xml</suppressionFile>
                    </suppressionFiles>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.carlsberg.consumertech.core</groupId>
                        <artifactId>owasp-suppressions</artifactId>
                        <version>${consumertech-java-commons.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <profiles>

        <profile>
            <id>errorprone</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>default-compile</id>
                                <phase>compile</phase>
                                <configuration>
                                    <compilerArgs>
                                        <arg>-Xlint:all,-options,-processing</arg>
                                        <!--arg>-Xdoclint:all/protected</arg-->
                                        <arg>-Xdoclint:none</arg>
                                        <arg>-XDcompilePolicy=simple</arg>
                                        <arg>
                                            -Xplugin:ErrorProne
                                            -Xep:NullAway:ERROR
                                            -XepOpt:NullAway:AnnotatedPackages=com.carlsberg.consumertech
                                            -XepOpt:NullAway:ExcludedClassAnnotations=lombok.Builder
                                        </arg>
                                    </compilerArgs>
                                </configuration>
                            </execution>
                            <execution>
                                <id>default-testCompile</id>
                                <phase>test-compile</phase>
                                <configuration>
                                    <compilerArgs>
                                        <arg>-Xlint:all,-options,-processing</arg>
                                        <arg>-Xdoclint:none</arg>
                                    </compilerArgs>
                                </configuration>
                            </execution>
                        </executions>
                        <configuration>
                            <release>${java.version}</release>
                            <showWarnings>true</showWarnings>
                            <failOnWarning>true</failOnWarning>
                            <annotationProcessorPaths>
                                <path>
                                    <groupId>com.google.errorprone</groupId>
                                    <artifactId>error_prone_core</artifactId>
                                    <version>2.3.3</version>
                                </path>
                                <path>
                                    <groupId>com.uber.nullaway</groupId>
                                    <artifactId>nullaway</artifactId>
                                    <version>0.7.5</version>
                                </path>
                                <path>
                                    <groupId>org.projectlombok</groupId>
                                    <artifactId>lombok</artifactId>
                                    <version>${lombok.version}</version>
                                </path>
                            </annotationProcessorPaths>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
        </profile>

        <profile>
            <id>checkerframework</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
                            <release>${java.version}</release>
                            <showWarnings>true</showWarnings>
                            <verbose>true</verbose>
                            <annotationProcessorPaths>
                                <path>
                                    <groupId>org.checkerframework</groupId>
                                    <artifactId>checker</artifactId>
                                    <version>${checkerframework.version}</version>
                                </path>
                                <path>
                                    <groupId>org.projectlombok</groupId>
                                    <artifactId>lombok</artifactId>
                                    <version>${lombok.version}</version>
                                </path>
                            </annotationProcessorPaths>
                            <annotationProcessors>
                                <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor
                                </annotationProcessor>
                                <!-- Add all the checkers you want to enable here -->
                                <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker
                                </annotationProcessor>
                            </annotationProcessors>
                            <compilerArgs>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                                <arg>-Alint=all</arg>
                                <!-- Optionally, -Awarns turns type-checking errors into warnings. -->
                                <!-- <arg>-Awarns</arg> -->
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>

	<modules>
		<module>service-api</module>
		<module>service-app</module>
	</modules>

</project>
